# pyesdb

./: .gitignore  Makefile  README.md  mypy.ini  setup.cfg  test_requirements.txt
pyesdb/: base.py  client.py  messagedb.py
tests/integration/: __init__.py  test_streams.py
tests/performance/: locustfile.py
