[metadata]
name = pyesdb
version = 0.0.1
description = Experimental client to EventStore Grpc interface
long_description = file: README.md
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    grpcio

#[options.package_data]
#* = *.txt, *.rst
#hello = *.msg

[options.packages.find]
exclude =
    tests
